--- a/ProductosApp/ProductosApp.csproj
+++ b/ProductosApp/ProductosApp.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Formularios\FrmGestionEmpleados.Designer.cs">
       <DependentUpon>FrmGestionEmpleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FrmMetodos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmMetodos.Designer.cs">
+      <DependentUpon>FrmMetodos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmProducto.cs">
       <SubType>Form</SubType>
     </Compile>
