--- a/ProductosApp/ProductosApp.csproj
+++ b/ProductosApp/ProductosApp.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formularios\FrmAñadirInventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmAñadirInventario.Designer.cs">
+      <DependentUpon>FrmAñadirInventario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmGestionEmpleados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,8 +106,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Formularios\FrmAñadirInventario.resx">
+      <DependentUpon>FrmAñadirInventario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmGestionEmpleados.resx">
       <DependentUpon>FrmGestionEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmMetodos.resx">
+      <DependentUpon>FrmMetodos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmProducto.resx">
       <DependentUpon>FrmProducto.cs</DependentUpon>
